--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
       </section>
       <section class="places">
         <article class="place">
-          <h3 class="place__title place__title_move">Куршская коса</h3>
+          <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
-            <h4 class="place__url-heading" lang="en">URL</h4>
+            <h3 class="place__url-heading" lang="en">URL</h3>
             <a href="http://park-kosa.ru" class="place__link" lang="en">park-kosa.ru</a>
           </div>
           <img src="./images/place-kosa.jpg" alt="Курская коса" class="place__image">
@@ -78,9 +78,9 @@
           </div>
         </article>
         <article class="place">
-          <h3 class="place__title">Кольский</h3>
+          <h2 class="place__title">Кольский</h2>
           <div class="place__website">
-            <h4 class="place__url-heading" lang="en">URL</h4>
+            <h3 class="place__url-heading" lang="en">URL</h3>
             <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link" lang="en">National Geographic</a>
           </div>
           <img src="./images/place-kolsky.jpg" alt="Скалистый берег Кольского полуострова" class="place__image">
@@ -95,9 +95,9 @@
           </div>
         </article>
         <article class="place">
-          <h3 class="place__title">Алтай</h3>
+          <h2 class="place__title">Алтай</h2>
           <div class="place__website">
-            <h4 class="place__url-heading" lang="en">URL</h4>
+            <h3 class="place__url-heading" lang="en">URL</h3>
             <a href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ" class="place__link" lang="en">YouTube</a>
           </div>
           <img src="./images/place-altai.jpg" alt="Ноутбук на фоне Алтайского леса" class="place__image">
@@ -112,9 +112,9 @@
           </div>
         </article>
         <article class="place">
-          <h3 class="place__title">Зимний Байкал</h3>
+          <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__website">
-            <h4 class="place__url-heading" lang="en">URL</h4>
+            <h3 class="place__url-heading" lang="en">URL</h3>
             <a href="https://vk.com/baikalmile" class="place__link" lang="en">https://vk.com/baikalmile</a>
           </div>
           <img src="./images/place-winter-baikal.jpg" alt="Рисунок изо льда на поверхности Байкала" class="place__image">
@@ -128,9 +128,9 @@
           </div>
         </article>
         <article class="place">
-          <h3 class="place__title">Карелия</h3>
+          <h2 class="place__title">Карелия</h2>
           <div class="place__website">
-            <h4 class="place__url-heading" lang="en">URL</h4>
+            <h3 class="place__url-heading" lang="en">URL</h3>
             <a href="http://vodlozero.ru" class="place__link" lang="en">http://vodlozero.ru/</a>
           </div>
           <img src="./images/place-karelia.jpg" alt="Лесное болото в Карелии" class="place__image">
@@ -144,7 +144,7 @@
       </section>
       <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
-          <h3 class="cover__title">До Байкала «на&nbsp;собаках»</h3>
+          <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
         </a>
       </section>
